src/app/invoices-home/edit-invoice-dialog/edit-invoice-dialog-tablet.component.css
@media only screen and (min-width: 768px) {

  form{
    padding: 2.875rem 3.5rem 2.9375rem 3.5rem;
  }

  form > h4:last-of-type{
      margin-top: 3.0625rem;
  }

  .action-container{
    padding-right: 3.5rem;
  }

  .add-item-btn{
    margin-top: 1.125rem;
    width: 31.5rem;
  }

  .bottom-spacer{
    display: none;
  }

  .scrollable {
    border-radius: 0 1.25rem 1.25rem 0;
    width: 38.5rem;
    height: calc(100vh - 5rem);
    margin-top: 5rem;
  }

  .string-id{
    margin: 3.6875rem auto 0 3.5rem;
  }

  .mobile-short{
    width: 9.5rem;
  }

  .item-container{
    display: flex;
    width: 100%;
    flex-wrap: nowrap;
  }

  .item-container:first-of-type{
    margin-top: 0.875rem;
  }

  .item-container:not(:first-of-type){
    margin-top: 1.125rem;
  }

  .input-container.item-name{
    width: 13.375rem;
  }

  .input-container.quantity{
    width: 3rem;
  }

  .input-container.price{
    width: 6.25rem;
  }

  .input-container.total{
    width: 3.625rem;
  }

  .item-list-container{
    margin-top: 1.6875rem;
    width: 31.5rem;
  }

  .input-container.total > h4{
    align-items: center;
    color: var(--invoices-count);
    display: inline-flex;
    height: 3rem;
  }

  .item-container:not(:first-of-type) > .input-container > label{
    display: none;
  }

  .item-container:not(:first-of-type) > .input-container > h6{
    display: none;
  }

  .item-container:not(:first-of-type) > .delete-btn{
    margin: auto 0 auto auto;
  }

  .item-container:first-of-type > .delete-btn{
    margin: 2.625rem 0 auto auto;
  }
}

